# language-models

./: .gitignore  README.md  colab-eval-4bit.ipynb  colab-eval-all.ipynb  mypy.ini
ai-assistants/: .gitignore  README.md  main.py  pyproject.toml
ai-assistants/instructions/: instructions_decision_maker.txt  instructions_underwriter.txt
ai-assistants/notebooks/: AI-Underwriter-Assistants.ipynb
ai-assistants/report/: underwriting_conversation.html
ai-assistants/src/: __init__.py  utils.py
bedrock-batch-inference/: bedrock_batch_inference.py
credit-knowledge/: README.md  app.py  create_db.py  output.txt  pyproject.toml  query_db.py  rag_chain.py
credit-knowledge/db/: vss.db
credit-knowledge/documents/: document.txt
credit-knowledge/scripts/deepseek_v3_tokenizer/: deepseek_tokenizer.py
creditXpert/: .gitignore  README.md  app.py  create_db.py  pyproject.toml  query_db.py
creditXpert/documents/: document.txt
creditXpert/scripts/: test_deepseek.py  test_openai.py  test_sqlite_vss.py
data/: fine_food_reviews_1k.parquet
fine-tuning-scripts/: gpt2_fine_tuning.py  gpt2_fine_tuning_inst.py  label_fine_tuning.py  miniLM_fine_tuning.py
gpt-etl/: .gitignore  README.md  conversation_titles.json  conversation_titles.txt  etl_process.py  etl_to_db.py  extract_conversations.py  extract_titles.py  orchestrate_flow.py  pyproject.toml  search_db.py
gpt-etl/3fdedecf56a7ea489b64ea9493fea222c1636c891dd604bea8a7cde36ad6324e-2025-04-29-11-50-40/: conversations.json
gpt-etl/conversations/: Data Science in Credit Scoring.md  Ethics in Credit Scoring.md  Future of Credit Scoring.md  Improving Credit Scoring Models.md  Regulations in Credit Scoring.md
gpt-oss-claude-code/: Makefile  Modelfile  README.md  colab-eval-4bit.ipynb  colab-eval-all.ipynb  colab-eval.ipynb  colab-finetune.ipynb  lora_config.yaml  pyproject.toml
gpt-oss-claude-code/colab/: colab-eval.ipynb  colab-finetune.ipynb
gpt-oss-claude-code/docs/: README.md  SETUP.md
gpt-oss-claude-code/scripts/: bridge.py  chat.py  extract_training_data.py  minicode.py  prepare_dataset.py
multi-task-model-api/: .gitignore  README.md  app.py  create_db.py  pyproject.toml  query_db.py  utils.py
multi-task-model-api/documents/: fastapi_docs.txt
named-entity-recognition/: .gitignore  README.md  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
named-entity-recognition/data/: marketing_sample.csv  marketing_sample_with_brands.csv
named-entity-recognition/scripts/: __init__.py  brand_extractor.py
notebooks/: AI-Underwriter-Assistant.ipynb  build_LLM_chapter_2.ipynb  build_LLM_chapter_3.ipynb  build_LLM_chapter_4.ipynb  embeddings-dim-reduction.ipynb  hf_smol_text_to_sql.ipynb  real-time-prediction.ipynb  tokens.ipynb  word-embeddings.ipynb
ollama-pydantic-ai/: .env  .gitgnore  README.md  main.py  pyproject.toml  requirements.txt
ollama-pydantic-ai/notebooks/: ollama_pydantic_ai.ipynb
patch-gpt/: .gitignore  README.md  patch_gpt_cli.sh  patchgpt_cli.py  pyproject.toml  ruff.toml
patch-gpt/notebooks/: attention.ipynb  emb_projection.ipynb  image_transformers.ipynb  patch_autoencoder.ipynb
patch-gpt/tools/: generate_checkerboard.py  patch_gpt.py  patch_gpt_gif_checkers.py  patch_gpt_gif_iris.py  patch_gpt_gif_patterns.py  train_patch_gpt_checkers.py  train_patch_gpt_iris.py
regression-fine-tuning/: README.md  marketing_sample_for_amazon_com.parquet  pyproject.toml  run_evaluation.py  run_fine_tuning.py  run_fine_tuning_experiments.py  run_fine_tuning_pipeline.py  run_pipeline.py  run_supervised_evaluation.py
serverless-rag/: .gitignore  Makefile  README.md  bootstrap.sh  diagram.py  samconfig.toml  template.yaml
serverless-rag/local/: answer-event.json  benchmark-event.json  ingest-event.json  query-aurora-event.json  query-dynamo-event.json  setup.sh
serverless-rag/seeds/: aurora-express.txt  generative-ai-developer.txt  seed.py
serverless-rag/src/: requirements.txt
serverless-rag/src/answer/: __init__.py  handler.py
serverless-rag/src/benchmark/: __init__.py  handler.py
serverless-rag/src/ingest/: __init__.py  handler.py
serverless-rag/src/query/: __init__.py  handler.py
serverless-rag/src/shared/: __init__.py  aurora_backend.py  dynamo_backend.py  embeddings.py  llm.py  similarity.py
spacy-nlp/: README.md
spacy-nlp/named-entity-recognition/: README.md
spacy-nlp/named-entity-recognition/scripts/: brand_extractor.py  inference.py
spacy-nlp/summarization/: spacy_summarization.py  spacy_summarize_app.py  spacy_summarize_core.py
