[project]
name = "gpt-oss-claude-code"
version = "0.1.0"
description = "Fine-tune gpt-oss-20b on Apple Silicon and connect it to Claude Code"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.6.0",
    "mlx-lm>=0.31.1",
    "tiktoken>=0.9.0",
    "vllm-mlx>=0.2.6",
]

[project.optional-dependencies]
transformers = [
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.uv]
default-groups = []
