[project]
name = "named-entity-recognition"
version = "0.1.0"
description = "Named Entity Recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gliner>=0.2.22",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "torch>=2.0.0",
    "spacy>=3.7.2,<3.8.0",
    "scikit-learn>=1.7.2",
    "en-core-web-sm",
    "numpy<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
