[project]
name = "patch-gpt"
version = "0.1.0"
description = "PatchGPT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.3",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "ruff>=0.11.2",
]
